# ralsAI

./: .env  .gitignore  Dockerfile  discord_bot.py  fast_api.py  main.py  pyproject.toml  render.yaml  test.py
src/componentns/agents/: ralsAgent.py
src/componentns/db/: vectorDB.py
src/components/agents/: GroqAgent.py  mistralAgent.py  ralsNewAgent.py
src/components/db/: vectorDB.py
src/components/prompts/: serverInfoPrompt.py  userInfoPrompt.py
src/components/utils/: eventReminder.py  helpResolver.py  intentClassifier.py  messageUtils.py  personalityManager.py  serverInfo.py
tmp/lancedb/server_docs.lance/_transactions/: 0-712b770e-5a77-4afd-b8de-0caa6316c5ee.txn
tmp/lancedb/server_docs.lance/_versions/: 1.manifest
