[project]
name = "the-rals-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.0",
    "cohere>=5.15.0",
    "fastembed>=0.7.0",
    "groq>=0.24.0",
    "lancedb>=0.22.0",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "requests>=2.32.3",
    "tantivy>=0.24.0",
]
